# data_transform

./: .gitignore  alter_nulls.sql  alter_pk.sql
backup-db/: datacenter_20260220_101349.dump
db-backup/: datacenter_20260220_103831.dump
docs/: data-architecture-flow.md  datacenter-system-flow.md  docker-context-remote.md  local_docker.md  remote-deploy.md  run-remote-api.md  sql_doc.md  ssh-remote-host.md
mqtt/: mosquitto.conf  pub.py  pub_ws.py  sub.py  sub_ws.py
plk-sync-server/: db.py  gen_json.py  main.py  pyproject.toml  sync-scripts.json
plk-sync-server/utility/: verify_db_sync.py
temp/: PYTHONdata_transformdental_monthly.sql  PYTHONdata_transformscripts_output.txt  c_hos_export.sql  c_hos_export_utf8.sql  cron_log.txt  remote_schema.txt  scripts_export.csv  scripts_raw.txt  sql_doc_content.txt
transform/: 000_sync_test.py  001_sync_bed_an_occupancy.py  002_sync_bed_type_all.py  003_sync_critical_wait_bed.py  004_sync_drgs_rw_top10.py  005_sync_drgs_sum.py  006_sync_icu_semi_icu_case_realtime.py  007_sync_icu_ward_death.py  008_sync_mortality_ami.py  009_sync_mortality_sepsis.py  00_sync_test.py  010_sync_normal_ward_death.py  011_sync_or_utilization_rate.py  012_sync_refer_paperless.py  013_sync_refer_top10.py  014_sync_waiting_time_cataract.py  015_sync_waiting_time_hernia.py  016_dental_monthly_transform.py  01_sync_bed_an_occupancy.py  02_sync_bed_type_all.py  03_sync_critical_wait_bed.py  04_sync_drgs_rw_top10.py  05_sync_drgs_sum.py  06_sync_icu_semi_icu_case_realtime.py  08_sync_mortality_ami.py  09_sync_mortality_sepsis.py  README.md  (+16 more)
(+3 files in other folders)
