[project]
name = "plk-sync-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "psycopg-pool==3.2.6",
    "psycopg[binary]==3.2.6",
    "pydantic-settings==2.8.1",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.34.0",
]
